--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
                 <div id="copyright-text" class="mb-2"></div>
                 <a id="github-link" href="https://github.com/mcmjasir">Github</a>
                 <span class="mx-1">&middot;</span>
+                <a id="researchgate-link" href="https://www.researchgate.net/profile/Mcm-Jasir">ResearchGate</a>
             </div>
         </div>
     </footer>
