--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     <!-- Photo -->
     <div class="container px-5">
         <div id="avatar">
-            <img class="shadow" src="static/assets/img/profile.png">
+            <img class="shadow" src="static/assets/img/jasir_prof.jpg">
         </div>
     </div>
     <!-- Photo -->
